# Agentic-RAG

./: .gitignore  Agentic RAG.ipynb  app.py  copilot.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt
utils/: docs_load.py  workflow.py
