[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "copilotkit>=0.1.58",
    "fastapi>=0.115.14",
    "langchain==0.3.26",
    "langchain-chroma>=0.1.2",
    "langchain-community==0.3.26",
    "langchain-google-genai==2.1.8",
    "langchain-openai>=0.3.28",
    "langgraph==0.6.2",
    "pypdf==5.9.0",
    "python-dotenv==1.0.1",
    "uvicorn>=0.35.0",
]
